# protein_function_prediction

./: .gitattributes  .gitignore  9606.rdf  README.md  notes.md  pyproject.toml  results.md  task_structure.md
01_raw_data/: compare_json.py
02_data_analysis/: compress_protein_data_for_analysis.py  fasta_analysis.py  filter_and_add_GO_terms_json.py  filter_json.py  go_annotations.py  go_annotations_plots.py  go_source.py  go_term_add_hierarchie.py  go_term_analysis.ipynb  obo_parsing.py
03_embeddings/: count_lines.py  embedding.ipynb  embedding_cluster.py
04_prediction/: gradient_boosting_cluster.py  random_forest.ipynb  support_vector_machine_cluster.py
05_analyse_model_performance/: evaluation_plots.py  result_analysis.py  support_visualization.py
05_inference/: rf_embeddings_inference.ipynb  svm_embeddings_inference.ipynb
data_analysis/: compress_protein_data_for_analysis.py  fasta_analysis.py  filter_json.py  go_annotations.py  go_source.py  go_term_add_hierarchie.py  go_term_analysis.ipynb  go_term_hierachie.py
embeddings/: compressed_protein_data.json
prediction/: embedding.ipynb  gradient_boosting_cluster.py  random_forest.ipynb  rf_model_inference.ipynb  script2.py  support_vector_machine_cluster.py
presentation/: embeddings_and_inference.ipynb  f1_recall_precision_frequency.py  gb_embeddings_inference.ipynb  hamming_loss_comparision.py
raw_data/: cleaned_uniprot_data.json  cleaning_data.py  compare_json.py  filtered_proteins.json  filtered_proteins_with_GO_ids.json  parsed_proteins.json  parsing_for_embedding.py  test_formating.json  (+1 more)
(+2 files in other folders)
