[tool.poetry]
name = "protein-function-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
biopython = "^1.84"
pyteomics = "^4.7.5"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
torch = "^2.5.1"
transformers = "^4.48.0"
peft = "^0.14.0"
numpy = "^2.2.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
